--- a/css/styles.css
+++ b/css/styles.css
@@ -656,6 +656,7 @@ align-items: center;
   background-color: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  padding: 40px;
 }
 
 .modal-close {
@@ -670,6 +671,32 @@ align-items: center;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.modal-title {
+font-weight: 700;
+font-size: 20px;
+line-height: 1.15;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--title-text-color);
+margin-bottom: 12px;
+}
+
+.modal-field {
+
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+margin-bottom: 10px;
+padding-left: 12px;
+padding-right: 12px;
+background-color: transparent;
+font-size: 16px;
 }
 
 /* portfolio */
