--- a/css/styles.css
+++ b/css/styles.css
@@ -696,7 +696,38 @@ margin-bottom: 10px;
 padding-left: 12px;
 padding-right: 12px;
 background-color: transparent;
-font-size: 16px;
+font-size: 14px;
+}
+
+.modal-comment {
+  width: 100%;
+  height: 96px;
+  font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.01em;
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+padding: 12px 16px;
+color: rgba(117, 117, 117, 0.5);
+resize: none;
+}
+
+.modal-input::placeholder .modal-comment::placeholder{
+  font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.01em;
+
+color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-input-text {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+line-height: 1.16;
+letter-spacing: 0.01em;
+
+color: var(--primary-text-color);
 }
 
 /* portfolio */
