--- a/css/styles.css
+++ b/css/styles.css
@@ -621,7 +621,7 @@ align-items: center;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Модалка */
+/* Модалка hero */
 
 .backdrop {
   position: fixed;
@@ -684,19 +684,40 @@ margin-bottom: 12px;
 }
 
 .modal-field {
+margin-bottom: 10px;
+}
 
+.modal-input-wrap {
+  position: relative;
 }
 
 .modal-input {
   width: 100%;
   height: 40px;
-border: 1px solid rgba(33, 33, 33, 0.2);
-border-radius: 4px;
-margin-bottom: 10px;
-padding-left: 12px;
-padding-right: 12px;
-background-color: transparent;
-font-size: 14px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  padding-left: 30px;
+  padding-right: 12px;
+  background-color: transparent;
+  font-size: 14px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .modal-input-icon {
+  fill: var(--accent-color);
+}
+
+.modal-input:focus, .modal-input-text:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-input-icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 12px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-comment {
@@ -707,6 +728,7 @@ line-height: 1.14;
 letter-spacing: 0.01em;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
+outline: none;
 padding: 12px 16px;
 color: rgba(117, 117, 117, 0.5);
 resize: none;
@@ -726,8 +748,47 @@ color: rgba(117, 117, 117, 0.5);
   font-size: 12px;
 line-height: 1.16;
 letter-spacing: 0.01em;
-
 color: var(--primary-text-color);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button {
+  margin: 0 auto;
+  display: block;
+}
+
+/* Форма футера Подпишись */
+
+.footer-signup {
+  margin-left: 94px;
+}
+
+.signup {
+  width: 358px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+margin-right: 12px;
+padding: 15px 0 15px 16px;
+}
+
+.signup-wrap {
+  display: flex;
+  justify-content: space-between;  
+}
+
+.signup-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 29px;
+}
+
+.signup-button-icon {
+  margin-left: 10px;
+  fill: var(--secondary-text-color);
 }
 
 /* portfolio */
