--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ body {
   content: '';
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -2px;
   width: 100%;
   height: 4px;
   border-radius: 2px;  
@@ -559,12 +559,12 @@ align-items: center;
 
 .footer-contact {
   flex-direction: column;
-  margin-right: 70px;
 }
 .footer-join {
   flex-direction: column;  
   width: 206px;
-  height: 80px;  
+  height: 80px;
+  margin-left: auto;
 }
 
 .footer-join-title {
@@ -661,8 +661,8 @@ align-items: center;
 
 .modal-close {
   position: absolute;
-  top: 14px;
-  right: 14px;
+  top: 8px;
+  right: 8px;
   width: 30px;
   height: 30px;
   background-color: var(--secondary-text-color);
@@ -671,11 +671,13 @@ align-items: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover {
+.modal-close:hover,
+.modal-close:focus {
   fill: var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .modal-title {
@@ -709,7 +711,8 @@ margin-bottom: 10px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus + .modal-input-icon {
+.modal-input:focus + .modal-input-icon,
+.modal-input:hover + .modal-input-icon {
   fill: var(--accent-color);
 }
 
@@ -727,7 +730,7 @@ margin-bottom: 10px;
 
 .modal-comment {
   width: 100%;
-  height: 96px;
+  height: 120px;
   font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.01em;
@@ -738,6 +741,10 @@ padding: 12px 16px;
 /* color: rgba(117, 117, 117, 0.5); */
 resize: none;
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-field-comment {
+  margin-bottom: 20px;
 }
 
 .modal-comment:focus {
@@ -766,13 +773,17 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: block;
 }
 
+.modal-field-check {
+  margin-bottom: 30px;
+}
+
 .modal-check-text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   display: flex;
-    align-items: center;
+  align-items: center;
   justify-content: center;
 }
 
@@ -795,9 +806,8 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: none;
 }
 
-.modal-check-text {
-  padding-top: 10px;
-  padding-bottom: 20px;
+.modal-check:focus + .modal-check-text span {
+  border: 2px solid var(--accent-color);
 }
 
 .policy-link {
@@ -823,7 +833,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /* Форма футера Подпишись */
 
 .footer-signup {
-  margin-left: 94px;
+  margin-left: auto;
 }
 
 .signup {
@@ -835,6 +845,7 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
 margin-right: 12px;
 padding: 15px 0 15px 16px;
+color: var(--secondary-text-color);
 }
 
 .signup-wrap {
@@ -934,7 +945,8 @@ padding: 15px 0 15px 16px;
 }
 
 .examples-text {
-  padding: 20px 24px;  
+  padding: 20px 24px;
+  border: 1px solid var(--portfolio-cards-border-color);
 }
 
 .examples-item {
@@ -980,7 +992,7 @@ padding: 15px 0 15px 16px;
   height: 100%;  
   background: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
   /* overflow: auto; */
 }
