--- a/css/styles.css
+++ b/css/styles.css
@@ -729,18 +729,18 @@ margin-bottom: 10px;
 }
 
 .modal-comment {
+  display: block;
   width: 100%;
   height: 120px;
   font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.01em;
-border: 1px solid rgba(33, 33, 33, 0.2);
-border-radius: 4px;
-outline: none;
-padding: 12px 16px;
-/* color: rgba(117, 117, 117, 0.5); */
-resize: none;
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  padding: 12px 16px;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-field-comment {
